[+]GetProductStats
