# internal/model/product.go
@@ -3,11 +3,11 @@ package model
 import "go.mongodb.org/mongo-driver/bson/primitive"
 
 type Product struct {
-	Name       string             `bson:"name"`
-	Code       string             `bson:"code"`
-	Quantity   uint32             `bson:"quantity"`
-	SellPrice  float64            `bson:"sell_price"`
-	Deleted_at primitive.DateTime `bson:"deleted_at,omitempty"`
+	Name       string  `bson:"name"`
+	Code       string  `bson:"code"`
+	Quantity   uint32  `bson:"quantity"`
+	SellPrice  float64 `bson:"sell_price"`
+	Is_Deleted bool    `bson:"is_deleted,omitempty"`
 }
 
 type ProductWithID struct {
