# swagger/api.yaml
@@ -56,41 +56,49 @@ paths:
                 $ref: '#/components/schemas/Error'
     get:
       summary: Get users by pattern
-        operationId: getUsers
-        parameters:
-          - in: query
-            name: pattern
-            schema:
-              type: string
-              default: ''
-          - in: query
-            name: limit
-            schema:
-              type: integer
-              minimum: 1
-              maximum: 100
-              default: 10
-          - in: query
-            name: page
-            schema:
-              type: integer
-              minimum: 1
-              default: 1
-        responses:
-          '200':
-            description: OK
-            content:
-              application/json:
-                schema:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/UserWithID'
-          default:
-            description: Unauthorized
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Error'
+      operationId: getUsers
+      parameters:
+        - in: query
+          name: pattern
+          schema:
+            type: string
+            default: ''
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+            default: 10
+        - in: query
+          name: page
+          schema:
+            type: integer
+            minimum: 1
+            default: 1
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - total
+                  - users
+                properties:
+                  total:
+                    type: integer
+                  users:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/UserWithID'
+        default:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /api/v1/customer:
     post: #salesman
       summary: Create customer
@@ -142,9 +150,17 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/CustomerWithID'
+                type: object
+                required:
+                  - total
+                  - customers
+                properties:
+                  total:
+                    type: integer
+                  customers:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/CustomerWithID'
         default:
           description: Unauthorized
           content:
@@ -202,9 +218,17 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/AgentWithID'
+                type: object
+                required:
+                  - total
+                  - agents
+                properties:
+                  total:
+                    type: integer                  
+                  agents:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/AgentWithID'
         default:
           description: Unauthorized
           content:
@@ -264,9 +288,17 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/GetProducts'
+                type: object
+                required:
+                  - total
+                  - products
+                properties:
+                  total:
+                    type: integer
+                  products:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/GetProducts'
         default:
           description: Unauthorized
           content:
@@ -297,6 +329,35 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SuccessResponse'
+        default:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /api/v1/product/stats:
+    get:
+      summary: Get product stats
+      description: Get product stats
+      operationId: getProductStats
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - total_products
+                  - total_quantity
+                  - total_stock_value
+                properties:
+                  total_products:
+                    type: integer
+                  total_quantity:
+                    type: integer
+                  total_stock_value:
+                    type: number
         default:
           description: Unauthorized
           content:
@@ -336,12 +397,12 @@ paths:
           name: from
           schema:
             type: string
-            format: date
+            default: ''
         - in: query
           name: to
           schema:
             type: string
-            format: date
+            default: ''
         - in: query
           name: page 
           schema:
@@ -361,9 +422,17 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/SalesWithID'
+                type: object
+                required:
+                  - total
+                  - sales
+                properties:
+                  total:
+                    type: integer
+                  sales:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/SalesWithID'
         default:
           description: Unauthorized
           content:
@@ -403,7 +472,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Acceptance'
+              type: object
+              required:
+                - products
+              properties:
+                products:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/AcceptanceRequest'
       responses:
         '201':
           description: OK
@@ -426,12 +502,12 @@ paths:
           name: from
           schema:
             type: string
-            format: date
+            default: ''
         - in: query
           name: to
           schema:
             type: string
-            format: date
+            default: ''
         - in: query
           name: page 
           schema:
@@ -451,9 +527,17 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/AcceptanceWithID'
+                type: object
+                required:
+                  - total
+                  - acceptances
+                properties:
+                  total:
+                    type: integer
+                  acceptances:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/AcceptanceWithID'
         default:
           description: Unauthorized
           content:
@@ -615,11 +699,13 @@ components:
       properties:
         id:
           type: string
+        name:
+          type: string
         quantity:
           type: integer
         price:
           type: number
-    AcceptanceProduct:
+    AcceptanceRequest:
       type: object
       required:
         - id
@@ -638,6 +724,25 @@ components:
         sale_price:
           type: number
           minimum: 0
+    AcceptanceProduct:
+      type: object
+      required:
+        - id
+        - name
+        - quantity
+        - cost_price
+      properties:
+        id:
+          type: string
+        name: 
+          type: string
+        quantity:
+          type: integer
+          minimum: 1
+        cost_price:
+          type: number
+          minimum: 0      
+    
     User:
       type: object
       required:
@@ -750,28 +855,30 @@ components:
         - type: object
           required:
             - id
+            - date
           properties:
             id:
               type: string
+            date:
+              type: string
+              format: date
         - $ref: '#/components/schemas/Sales'
-    Acceptance:
+    AcceptanceWithID:
       type: object
-      requred:
-      - products
-      - accepted_by
+      required:
+        - id
+        - date
+        - products
       properties:
+        id:
+          type: string
+        date:
+          type: string
+          format: date
         products:
           type: array
           items:
             $ref: '#/components/schemas/AcceptanceProduct'
-    AcceptanceWithID:
-      allOf:
-        - type: object
-          required:
-            - id
-          properties:
-            id:
-              type: string
-        - $ref: '#/components/schemas/Acceptance'
+        
 security:
   - BearerAuth: [ ]
